--- a/.github/workflows/debug.yaml
+++ b/.github/workflows/debug.yaml
@@ -22,5 +22,4 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: npm install
-      - run: node src/main.js
+      - run: node compile/index.js
