--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "chat-in-issue",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "src/main.js",
   "license": "MIT",
+  "scripts": {
+    "compile": "ncc build ./src/main.js -o compile"
+  },
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
